fixed several message layout issues, small changes to Connections (right sidebar) style

--- a/src/app/connections/connections.component.scss
+++ b/src/app/connections/connections.component.scss
@@ -53,7 +53,7 @@
   display:flex;
   align-items: center;
   flex-direction: row;
-  height: 4rem;
+  height: 3.2rem;
   padding: 0px 7px;
   gap: 10px;
   transition: 0.1s all ease-in-out;
